# rensa

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmark.py  benchmark_2.py  build.rs  clippy.toml  deny.toml  pyproject.toml  requirements.txt  rustfmt.toml
.bench/: test_run.json  test_run2.json
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: CI.yml  security.yml
benchmarks/: advanced_benchmark.py  cminhash_vs_oph_benchmark.py  full_benchmark.py  go_crawltrap_benchmark.py  html_crawl_similarity.py  lsh_benchmark.py  perf_memory_benchmark.py  rminhash_vs_cminhash.py  simple_benchmark.py  validate_benchmark.py  wiki_benchmark.py
benchmarks/baselines/: full_benchmark_run.json  go_crawltrap_corpus_benchmark.json  simple_benchmark_run.json
benchmarks/cminhash/: cminhash_rminhash_advanced_benchmark.py  simple_benchmark.py
benchmarks/rminhash/: simple_benchmark.py
crates/rensa-core/: Cargo.toml
crates/rensa-core/src/: lib.rs  rminhash.rs  utils.rs
crates/rensa-core/src/simd/: dispatch.rs  x86.rs
crates/rensa-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/rensa-ffi/include/: rensa_ffi.h
crates/rensa-ffi/src/: lib.rs
crates/rensa-py/: Cargo.toml
crates/rensa-py/src/: cminhash.rs  env.rs  inline_dedup.rs  lib.rs  lsh.rs  rminhash.rs
crates/rensa-py/src/cminhash/: core.rs  py.rs
crates/rensa-py/src/inline_dedup/: common.rs  rminhash.rs
crates/rensa-py/src/lsh/: config.rs  index.rs  one_shot.rs  py.rs  tests.rs
crates/rensa-py/src/py_input/: buffer.rs  fast_sequence.rs  ptr_hash.rs
crates/rensa-py/src/rminhash/: matrix.rs  permutation_cache.rs  pipeline.rs  py.rs  rho.rs  send_ptr.rs  token.rs
examples/go-crawltrap/: go.mod  go.sum
examples/go-crawltrap/cmd/corpusbench/: main.go
examples/go-crawltrap/htmlfeat/: config.go  extract.go  htmlfeat_test.go  scratch.go
examples/go-crawltrap/internal/corpusrunner/: runner.go  runner_test.go
examples/go-crawltrap/internal/testutil/: ffi.go
examples/go-crawltrap/rensaffi/: rensaffi_test.go  rensaffi_unix.go
examples/go-crawltrap/rensahash/: hash_amd64_arm64.go  hash_test.go
examples/go-crawltrap/testdata/: corpus.json
examples/go-crawltrap/trapdetector/: config.go  corpus_test.go  detector.go  trapdetector_test.go
src/: cminhash.rs  dedup.rs  inline_dedup.rs  lib.rs  lsh.rs  opt_dens_minhash.rs  py_input.rs  rminhash.rs  utils.rs
src/cminhash/: batch.rs  core.rs  py.rs
src/inline_dedup/: cminhash.rs  rminhash.rs
src/lsh/: config.rs  index.rs  one_shot.rs  py.rs  tests.rs
src/py_input/: buffer.rs  convert.rs  fast_sequence.rs  prehashed.rs  ptr_hash.rs  unicode_fast.rs
src/rminhash/: cache.rs  config.rs  matrix.rs  permutation_cache.rs  pipeline.rs  py.rs  rho.rs  rho_raw.rs  token.rs
src/simd/: arm64_neon.rs  dispatch.rs  mod.rs  x86.rs
tests/: test_cminhash.py  test_inline_dedup.py  test_rensa.py
