[package]
name = "rensa"
version = "0.3.1"
edition = "2021"
rust-version = "1.83"
authors = ["Luis Cardoso <luis@luiscardoso.dev>"]
description = "High-performance MinHash implementation in Rust with Python bindings for efficient similarity estimation and deduplication of large datasets"
readme = "README.md"
license = "MIT"
repository = "https://github.com/beowolx/rensa"
keywords = ["minhash", "lsh", "similarity", "deduplication", "data-mining"]
categories = [
  "algorithms",
  "data-structures",
  "science",
  "text-processing",
  "database-implementations",
]

[lib]
name = "rensa"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.28.0"
rand = "0.9.2"
rustc-hash = "2.1.1"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
rand_xoshiro = "0.7.0"
rand_core = "0.9.3"
mimalloc = "0.1.48"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
debug-assertions = false
overflow-checks = false
strip = true

[profile.release.build-override]
opt-level = 3
