[workspace]
members = ["crates/rensa-core", "crates/rensa-ffi", "crates/rensa-py"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.83"
authors = ["Luis Cardoso <luis@luiscardoso.dev>"]
license = "MIT"
repository = "https://github.com/beowolx/rensa"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
debug-assertions = false
overflow-checks = false
strip = true

[profile.release.build-override]
opt-level = 3

[profile.release-ffi]
inherits = "release"
panic = "unwind"
