[package]
name = "rensa-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Python extension module for rensa"
publish = false

[lib]
name = "rensa"
crate-type = ["cdylib", "rlib"]

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]

[dependencies]
pyo3 = "0.28.2"
rensa-core = { path = "../rensa-core" }
rand = "0.9.2"
rustc-hash = "2.1.1"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
rand_xoshiro = "0.7.0"
rand_core = "0.9.3"
mimalloc = { version = "0.1.48", optional = true }
rayon = "1.11.0"
